0.04 correct alignment
content1.html was displaying contents horizontally. trying to correct alignment with these changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,20 +13,25 @@ header {
     background-color: #333;
     color: #fff;
     padding: 10px;
+    text-align: center;
 }
 
 main {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
 
 #menu {
-    width: 200px;
+    width: 100%;
     background-color: #f0f0f0;
     padding: 20px;
 }
 
 #content {
     flex: 1;
+    width: 100%;
     padding: 20px;
 }
 
@@ -34,6 +39,8 @@ main {
 #menu ul {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    justify-content: space-around;
 }
 
 #menu ul li {
@@ -48,4 +55,16 @@ main {
 
 #menu ul li a:hover {
     color: #007bff;
+}
+
+section {
+    margin: 20px 0;
+}
+
+section h2 {
+    margin-bottom: 10px;
+}
+
+section p {
+    margin-bottom: 10px;
 }
